# ImmSim-FLAMEGPU2-model

./: .gitignore  CMakeLists.txt  README.md
include/: entity.cuh  math.cuh  memory.cuh  simulation.cuh
src/: entity.cu  main.cu  math.cu  memory.cu  simulation.cu
