# Minimum CMake version 3.18
cmake_minimum_required(VERSION 3.18...3.25 FATAL_ERROR)

# Name the project and set languages, this must be done after flamegpu_init_cuda_architectures
project(ImmSim CUDA CXX)

# Manually specify the FLAMEGPU_VISUALISATION option to provide it prior to original configuration and allow the default to be overridden in the downstream project
option(FLAMEGPU_VISUALISATION "Enable FLAMEGPU visualisation support" OFF)

# Optionaly set the version of flamegpu which should be used, ideally a tag (i.e. `v2.0.0-rc`) or branch name, or potentially a commit hash.
set(FLAMEGPU_VERSION "v2.0.0-rc.2" CACHE STRING "FLAMEGPU/FLAMEGPU2 git branch or tag to use")

# Our core dependency is FLAMEGPU2 lib, first lets find it
include(${CMAKE_CURRENT_LIST_DIR}/cmake/flamegpu2.cmake)

# Include common rules from the FLAMEGPU/FLAMEGPU2 repositories CMake
include(${FLAMEGPU_ROOT}/cmake/common.cmake)

# Define output location of binary files
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/)

# Enforce architechture compatible with gpu
#set(CMAKE_CUDA_ARCHITECTURES 61)

# Enforce nvcc version compatible with flamegpu2, 12.x to 13.x
#set(CMAKE_CUDA_COMPILER=/usr/local/cuda-12.2/bin/nvcc)

# Compilation flags in order to force C++17
#set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CUDA_STANDARD 17)
#set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --extended-lambda --expt-relaxed-constexpr -std=c++17")

# Python include dirs in order to use matplotlib
set(Python3_INCLUDE_DIR /usr/include/python3.8)
set(Python3_LIBRARY /usr/lib/x86_64-linux-gnu/libpython3.8.so)
find_package(Python3 COMPONENTS Interpreter Development REQUIRED)

# Handle CMAKE_CUDA_ARCHITECTURES gracefully, passign the project name for code-injection
#include(${FLAMEGPU_ROOT}/cmake/CUDAArchitectures.cmake)
#flamegpu_init_cuda_architectures(PROJECT ImmSim)

# Manually list all of the files which require building or influence re-building (i.e. headers).
SET(ALL_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cu
    ${CMAKE_CURRENT_SOURCE_DIR}/src/math.cu
    ${CMAKE_CURRENT_SOURCE_DIR}/src/memory.cu
    ${CMAKE_CURRENT_SOURCE_DIR}/src/entity.cu
)

# Add the executable and set required flags for the target
flamegpu_add_executable("${PROJECT_NAME}" "${ALL_SRC}" "${FLAMEGPU_ROOT}" "${PROJECT_BINARY_DIR}" TRUE)

# Add src directory to include path
target_include_directories("${PROJECT_NAME}" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src" "${CMAKE_CURRENT_SOURCE_DIR}/include" "${Python3_INCLUDE_DIR}")

# Link libraries
target_link_libraries("${PROJECT_NAME}" PRIVATE "${Python3_LIBRARY}")

# Also set as (visual studio) startup project
set_property(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" PROPERTY VS_STARTUP_PROJECT "${PROJECT_NAME}")

# Set the default (visual studio) debugger configuration
set_target_properties("${PROJECT_NAME}" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" VS_DEBUGGER_COMMAND_ARGUMENTS "-s 10")
